Added edit user PUT endpoint
