# gen/http/user/server/server.go
@@ -21,6 +21,7 @@ type Server struct {
 	Mounts []*MountPoint
 	Get    http.Handler
 	Create http.Handler
+	Edit   http.Handler
 	Delete http.Handler
 }
 
@@ -59,10 +60,12 @@ func New(
 		Mounts: []*MountPoint{
 			{"Get", "GET", "/user/{name}"},
 			{"Create", "POST", "/user"},
+			{"Edit", "PUT", "/user"},
 			{"Delete", "DELETE", "/user/{name}"},
 		},
 		Get:    NewGetHandler(e.Get, mux, decoder, encoder, errhandler, formatter),
 		Create: NewCreateHandler(e.Create, mux, decoder, encoder, errhandler, formatter),
+		Edit:   NewEditHandler(e.Edit, mux, decoder, encoder, errhandler, formatter),
 		Delete: NewDeleteHandler(e.Delete, mux, decoder, encoder, errhandler, formatter),
 	}
 }
@@ -74,6 +77,7 @@ func (s *Server) Service() string { return "user" }
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.Get = m(s.Get)
 	s.Create = m(s.Create)
+	s.Edit = m(s.Edit)
 	s.Delete = m(s.Delete)
 }
 
@@ -81,6 +85,7 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountGetHandler(mux, h.Get)
 	MountCreateHandler(mux, h.Create)
+	MountEditHandler(mux, h.Edit)
 	MountDeleteHandler(mux, h.Delete)
 }
 
@@ -165,6 +170,57 @@ func NewCreateHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "create")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "user")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
+// MountEditHandler configures the mux to serve the "user" service "edit"
+// endpoint.
+func MountEditHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("PUT", "/user", f)
+}
+
+// NewEditHandler creates a HTTP handler which loads the HTTP request and calls
+// the "user" service "edit" endpoint.
+func NewEditHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeEditRequest(mux, decoder)
+		encodeResponse = EncodeEditResponse(encoder)
+		encodeError    = EncodeEditError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "edit")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "user")
 		payload, err := decodeRequest(r)
 		if err != nil {
